--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 	<div id="content">
 		<h1>Correct Horse Battery Staple</h1>
-		<h2>Secure password generator to help keep you safer online</h2>
+		<h2>Probably secure password generator to help keep you safer online</h2>
 		<hr>
 		<div class="field input">
 			<input type="text" id="txt"/><strong>Length:</strong><em>0</em>
